Fixes spacing issues

--- a/src/app/components/confirmation-modal/confirmation-modal.component.sass
+++ b/src/app/components/confirmation-modal/confirmation-modal.component.sass
@@ -23,22 +23,22 @@
         z-index: 1040
         background-color: rgba(0, 0, 0, 0.50)
 
-        .heading
-            margin: 24px 0 32px 0
+    .heading
+        margin: 24px 0 32px 0
 
-            h1
-                font-size: 40px
-                font-weight: bold
+        h1
+            font-size: 40px
+            font-weight: bold
 
-            p
-                font-size: 16px
-                color: $rose-500
+        p
+            font-size: 16px
+            color: $rose-500
 
     .cartitems
         // border: solid 1px pink
         background-color: $rose-50
         padding: 8px 24px 24px 24px
-        margin: 0 0 32px 0
+        margin: 32px 0 32px 0
         display: flex
         flex-direction: column
 
